# py_templating_engine

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  main.py  pyproject.toml  templater.json
py_templating_engine/: exceptions.py
py_templating_engine/ast/: __init__.py  code_node.py  left_bracket_node.py  right_bracket_node.py  statements_node.py  variable_node.py
py_templating_engine/environment/: templates_environment.py
py_templating_engine/lexer/: lexer.py
py_templating_engine/parser/: parser.py
py_templating_engine/renderer/: renderer.py
py_templating_engine/template/: template.py
py_templating_engine/token/: __init__.py  token.py  token_type.py
src/ast/: __init__.py  code_node.py  left_bracket_node.py  right_bracket_node.py  statements_node.py  variable_node.py
src/environment/: __init__.py  templates_environment.py
src/lexer/: lexer.py
src/parser/: parser.py
src/renderer/: renderer.py
src/template/: template.py
src/token/: token_type.py
templating_engine/lexer/: lexer.py
templating_engine/token/: token.py  token_type.py
test_template/{{templater.app_label}}/: first_template copy.html
